--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.assignment {
+    display:flex;
+    padding:10px;
+    margin:10px;
+    background:rgb(156, 156, 156);
+}
+
+.assingment img {
+    width:250px;
+    padding:10px;
+}
+
 h1 {
     color:darkslategray;
     text-align:center;
