--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,49 @@
 body {
-    background:plum;
+    background: #FFFFFF;
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.assignment {
+.assignments {
     display:flex;
-    padding:10px;
+    flex-wrap:wrap;
+
+}
+
+.assignment {
+    width:24%;
+    padding:20px;
     margin:10px;
-    background:rgb(156, 156, 156);
+    background: #9FE1FD;
+    border-radius: 40px;
 }
 
 .assingment img {
-    width:250px;
-    padding:10px;
+    width:200px;
+    padding:20px;
+    border:4px solid #FFFF1B;
+    display:block;
+    margin:auto;
+
+}
+
+.assignment img:hover {
+    border:4px solid #1F2626;
 }
 
 h1 {
-    color:darkslategray;
+    color: #1F2626;
     text-align:center;
+}
+
+h2 {
+    text-align:center;
+}
+
+a {
+    text-decoration: none;
+    color: #1F2626;
+}
+
+a:hover {
+    color:white;
 }
